Fixed the navbar on mobile, styled the scrollbar

--- a/Style-JS/mystyle.css
+++ b/Style-JS/mystyle.css
@@ -25,6 +25,27 @@
 }
 
 
+/* width */
+::-webkit-scrollbar {
+    width: 5px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: transparent; 
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #888; 
+    border-radius: 2px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+  }
+
 /* ============ Custom Font ============ */
 /* Specify in CSS */
 code { font-family: 'Fira Code', monospace; }
@@ -43,7 +64,7 @@ code { font-family: 'Fira Code', monospace; }
 
 body {
     font-family: /*"MyHand",*/Arial, sans-serif;
-    font-size: 20px; 
+    font-size: 20px;
 }
 
 /* ============ Other ============ */
@@ -149,8 +170,8 @@ hr2-solidred {
     overflow: hidden;
     background-color: #505050;
     padding: 0;
-    width: auto;
-    border-radius: 15px;
+    width: fit-content;
+    border-radius: 10px;
     position: fixed;
     top: 0;
     transform: translateX(-50%);
@@ -166,8 +187,8 @@ hr2-solidred {
     outline: 0;
     cursor: pointer;
     transition: .5s;
-    font-size: 17px;
-    padding: 14px 16px;
+    font-size: 12px;
+    padding: 12px 14px;
     color: white;
     margin: auto;
 }
